# assistant-v2

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  README.md  THIRD-PARTY-LICENSES.md  package-lock.json  package.json
backend/: .env.example  com.assistant.backend_manager.json  native_host.cmd  native_host.py  pyproject.toml  requirements-lock.txt  requirements.txt
backend/app/: app_state.py  config.py  constants.py  logging_config.py  main.py  process_utils.py
backend/app/middleware/: asgi_utils.py  csrf.py  security.py
backend/app/models/: kb.py  request_models.py  response_models.py
backend/app/routers/: auth.py  feedback.py  generate.py  kb.py  (+4 more)
backend/ingestion/: cli.py  kb_loader.py  pipeline.py  ticket_loader.py  url_loader.py  utils.py
backend/tests/: conftest.py  helpers.py  test_audit.py  test_auth.py  test_chromadb_warmup.py  test_chunker.py  test_cli.py  test_config.py  test_csrf.py  test_dynamic_fewshot.py  test_exception_handlers.py  test_feedback.py  test_generate.py  test_generate_pinned.py  test_generate_stream.py  test_health.py  test_ingest_collections.py  test_ingest_upload.py  test_ingest_url.py  test_ingestion.py  test_kb.py  test_kb_cache.py  test_kb_create.py  test_kb_edit.py  test_kb_tags.py  test_logging_config.py  test_microsoft_docs.py  test_middleware.py  test_model_download.py  test_models.py  test_native_host.py  test_pipeline_extended.py  test_prepare_context.py  test_process_control.py  test_rag_service.py  test_security_middleware.py  test_service_retry.py  test_services.py  test_session_store.py  test_url_loader.py
(+216 files in other folders)
